--- a/index.html
+++ b/index.html
@@ -4,29 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TestJS</title>
+    <title>Document</title>
 </head>
 <body>
-    <main>
-        <div class="operation">
-            <button class="button" onclick="plus()">+</button>
-            <button class="button" onclick="minus()">-</button>
-            <button class="button" onclick="multiply()">*</button>
-            <button class="button" onclick="divide()">/</button>
-        </div>
-        <hr>
-
-        <div class="input">
-            <p>Number 1:</p>
-            <input type="number" id="num1">
-            <p>Number 2:</p>
-            <input type="number" id="num2">
-        </div>
-
-        <div class="result">Result = &nbsp; <span id="res"></span></div>
-    </main>
-    
-    <script src="script.js"></script>
-    <link rel="stylesheet" href="styles.css">
+<div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, cum ex pariatur architecto et aliquam aperiam autem ullam ea possimus ab quos facilis commodi, veritatis adipisci fugit nesciunt. Mollitia, libero.</div>
 </body>
 </html>
